--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -15,7 +15,7 @@
 							 <p class="card-title">
 								 <h5 class="card-title">
 									 @item.Name
-									 <a class="text-white float-right"><i class="bi bi-pencil-square"></i></a>
+									 <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
 								 </h5>
 							 </p>
 						 </div>
@@ -34,7 +34,7 @@
 					 <div class="col-md-12">
 						 <div class="card-footer">
                              <p class="card-text">
-                                 <a class="btn btn-outline-primary float-right"><i class="bi bi-eye-fill"></i> Show details</a>
+                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id"><i class="bi bi-eye-fill"></i> Show details</a>
                                  <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart Price @item.Price.ToString("c")</a>
                              </p>
 						 </div>
@@ -43,4 +43,8 @@
 			 </div>
 		 </div>
 	}
+</div>
+
+<div style="position:fixed; right: 25px; bottom: 25px" class="text-white">
+	<a asp-controller="Products" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i> Add New</a>
 </div>
